# Hive-AI

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitmodules  3-gems-plan.md  BLUEPRINT.md  CLAUDE.md  Dockerfile  GEMS_BLUEPRINT.md  HIVE_AI_DBC_PLAN.md  LESSONS_V3.md  LICENSE  README.md  UPGRADE_QWEN35.md  clean_git.sh  docker-compose.spiritbomb.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh  score_ledger.json  setup.bat  setup.sh  test_confidence_calibrator.py  test_critique_memory.py  test_telemetry_burnin.py
baselines/: qwen25_coder_14b_instruct.json
bench/: run_bench.py  runner.py  tasks.py
configs/: topic_matrix.json
desktop/: README.md  build.sh  hiveai.spec  package.json
docs/: COMPUTER_B_SETUP.md  ELASTIC_BRAIN_DESIGN.md  GPU_CLUSTERING_OPTIONS.md  GPU_CLUSTERING_STATUS.md  GRANDMA_PROOF_DEPLOYMENT.md  HIVEPOA_POOL_API.md  HOW_GPU_SHARING_WORKS.md  INTEGRATION_STATUS.md  MASTER_PLAN.md  PIPELINE_TEMPLATE.md  evidence_campaign_v1.md  improvement_notes.md  parallel_gems_design.md  phase3_acceptance_gates.md  refinery_model.md  synthetic_traffic_design.md  v4_decentralized_blueprint.md
evals/: __init__.py  failure_analysis_hiveai-v1_2026-02-24.json  hiveai-v1_20260224_225947.json  qwen3-14b_20260222_123420.json  qwen3-14b_20260222_123524.json  qwen3-14b_20260222_130424.json
evidence_campaign/: baseline_provenance.md  canonical_buckets.json  canonical_counts.json  full_baseline.json  gate4_dryrun_351806464624.json  gate4_dryrun_497b999c1e33.json  gate4_dryrun_6d3d1fd20ba6.json  gate4_dryrun_9cf93fce48ad.json  (+17 more)
(+2357 files in other folders)
