[project]
name = "hiveai-knowledge-refinery"
version = "1.0.0"
description = "Automated AI-powered research system that builds knowledge graphs and publishes to Hive blockchain"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "crawl4ai>=0.8.0",
    "flask>=3.1.2",
    "gunicorn>=25.0.0",
    "instructor>=1.0.0",
    "lxml>=5.3,<6.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pgvector>=0.3.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "readability-lxml>=0.8.4",
    "requests>=2.32.0",
    "semchunk>=3.0.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.0",
    "tenacity>=9.0.0",
    "transformers>=5.0.0",
]
